[package]
name = "pg_later"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
anyhow = "1.0.72"
chrono = {version = "0.4.26", features = ["serde"] }
log = "0.4.19"
pgmq = "0.27.0"
pgrx = "0.11.4"
serde = "1.0.164"
serde_json = "1.0.99"
sqlparser = "0.47"
sqlx = { version = "0.7.3", features = [
    "postgres",
    "chrono",
    "postgres",
    "json"
] }
tokio = "1.29.1"
url = "2.4.0"
postgres-types = "0.2.5"

[dev-dependencies]
pgrx-tests = "0.11.4"
rand = "0.8.5"
tokio = { version = "1", features = ["macros"] }
pgmq-core = "0.8.4"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
