[package]
name = "pg_later"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_later"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
anyhow = "1.0.72"
chrono = {version = "0.4.26", features = ["serde"] }
log = "0.4.19"
pgmq = "0.29"
pgrx = "=0.12.5"
serde = "1.0.164"
serde_json = "1.0.99"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "chrono",
    "postgres",
    "json"
] }
tokio = "1.29.1"
url = "2.4.0"
postgres-types = "0.2.5"

[dev-dependencies]
pgrx-tests = "=0.12.5"
rand = "0.8.5"
tokio = { version = "1", features = ["macros"] }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
